--- a/Forum/SharedModels/SharedModels.csproj
+++ b/Forum/SharedModels/SharedModels.csproj
@@ -47,7 +47,7 @@
         <Compile Include="AnswerDto.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="QuestionDto.cs" />
-        <Compile Include="User.cs" />
+        <Compile Include="UserDto.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="packages.config" />
