--- a/Forum/QuestionAPI/QuestionAPI.csproj
+++ b/Forum/QuestionAPI/QuestionAPI.csproj
@@ -5,11 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0-preview.3.21201.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Repository" />
     <Folder Include="Service" />
   </ItemGroup>
 
