Docker is up and running.

--- a/Forum/AnswerAPI/AnswerAPI.csproj
+++ b/Forum/AnswerAPI/AnswerAPI.csproj
@@ -14,4 +14,11 @@
     <Folder Include="Service" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\.dockerignore">
+      <Link>.dockerignore</Link>
+      <DependentUpon>Dockerfile</DependentUpon>
+    </None>
+  </ItemGroup>
+
 </Project>
