--- a/Forum/QuestionAPI/QuestionAPI.csproj
+++ b/Forum/QuestionAPI/QuestionAPI.csproj
@@ -13,4 +13,11 @@
     <Folder Include="Service" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="..\.dockerignore">
+      <Link>.dockerignore</Link>
+      <DependentUpon>Dockerfile</DependentUpon>
+    </None>
+  </ItemGroup>
+
 </Project>
