Messaging and RestClient
I have now implemented messaging between UserAPI and QuestionAPI, and implemented connection using Rest Sharp between AnswerAPI and QuestionAPI

--- a/Forum/QuestionAPI/appsettings.json
+++ b/Forum/QuestionAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RabbitMQConnectionString": "host=rattlesnake.rmq.cloudamqp.com;virtualHost=cbnacseb;username=cbnacseb;password=fNZOD5h4HUjWzCePRhZ_j5Isd31J6qgl"
+  }
 }
