--- a/Forum/QuestionAPI/QuestionAPI.csproj
+++ b/Forum/QuestionAPI/QuestionAPI.csproj
@@ -5,12 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyNetQ" Version="7.0.0-alpha4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0-preview.3.21201.2" />
+    <PackageReference Include="RestSharp" Version="106.11.8-alpha.0.14" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Service" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +16,10 @@
       <Link>.dockerignore</Link>
       <DependentUpon>Dockerfile</DependentUpon>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SharedModels\SharedModels.csproj" />
   </ItemGroup>
 
 </Project>
