--- a/Forum/UserAPI/UserAPI.csproj
+++ b/Forum/UserAPI/UserAPI.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyNetQ" Version="7.0.0-alpha4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0-preview.3.21201.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.0-preview.3.21201.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
